# paper-daily-666

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: daily-document-ocr.yml
config/: arxiv.toml
data/state/: runs.jsonl
docs/: index.md
docs/design/: architecture.md
document_ocr/2026-03-30/: README.md  papers.json
document_ocr/2026-03-31/: README.md  papers.json
document_ocr/2026-04-01/: README.md  papers.json
document_ocr/2026-04-02/: README.md  papers.json
document_ocr/2026-04-03/: README.md  papers.json
document_ocr/2026-04-04/: README.md  papers.json
document_ocr/2026-04-05/: README.md  papers.json
document_ocr/2026-04-06/: README.md  papers.json
document_ocr/2026-04-07/: README.md  papers.json
document_ocr/2026-04-08/: README.md  papers.json
document_ocr/2026-04-09/: README.md  papers.json
document_ocr/2026-04-10/: README.md  papers.json
document_ocr/2026-04-11/: README.md  papers.json
document_ocr/2026-04-12/: README.md  papers.json
document_ocr/2026-04-13/: README.md  papers.json
document_ocr/2026-04-14/: README.md  papers.json
document_ocr/2026-04-15/: README.md  papers.json
document_ocr/2026-04-16/: README.md  papers.json
document_ocr/2026-04-17/: README.md  papers.json
document_ocr/2026-04-18/: README.md  papers.json
document_ocr/2026-04-19/: README.md  papers.json
document_ocr/2026-04-20/: README.md  papers.json
document_ocr/2026-04-21/: README.md  papers.json
scripts/: README.md  run_daily_topic.sh  run_topic_backfill.ps1  run_topic_week.ps1
topics/: document_ocr.toml
(+1614 files in other folders)
